src/test/deca/syntax/parser/invalid/decl_var_type_reserved_words_protected.deca
// Parser test, type unavailable

{
    protected x = 5;
}